--- a/jazzy_base_arduino_code/jazzy_base_arduino-v2.x/catkin_jbot2_msg_ws/README
+++ b/jazzy_base_arduino_code/jazzy_base_arduino-v2.x/catkin_jbot2_msg_ws/README
@@ -1,15 +1,19 @@
 http://dougsbots.blogspot.com/2012/06/custom-ros-messages-with.html
 
+Custom messages for jbo2.
 
-Building from this directory:
+- Building from this directory:
 
 catkin_make_isolated
 catkin_make install
+ # creates install/include/jbot2_msgs/jbot2_pwm.h 
+
+#create the arduino compatable include header for messaes
 cd install
 . setup.bash
-rosrun rosserial_arduino make_libraries.py [$install_Dir normally ~/Arduino/Libraries]
+rosrun rosserial_arduino make_libraries.py ~/Arduino/libraries
   #will install to ~/Arduino/libraries/ros_lib/jbot2_msgs/jbot2_pwm.h
 
-cp install/include/jbot2_msgs/jbot2_pwm.h into same dir as arduino ino file
+ install/include/jbot2_msgs/jbot2_pwm.h into same dir as arduino ino file
 # Alternately we create full and rpm  package for this into the jbot2 code
 
